test/2/type/sub/CII-CIII.ploy
main = {
  _:(Int Int Int) = (0 0)
}
